[project]
name = "repl-nix-consciousnesschatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.52.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.10.10",
    "networkx",
    "sqlalchemy",
    "flask-cors",
    "python-time",
    "requests",
    "pyyaml",
    "gunicorn==23.0.0",
    "uvicorn-worker==0.2.0",
    "pytest-isort==4.0.0",
]
